# AirStudio

./: .gitignore  README.md  install.bat  models.bat  pyproject.toml  run.bat
configs/: airstudio.yaml
src/airstudio/: __init__.py  config.py  logging_utils.py  main.py  profiles.py  prompts.py  registry.py
src/airstudio/bench/: report.py  runner.py
src/airstudio/engines/: airllm_engine.py  base.py
src/airstudio/metrics/: instrumentation.py  ram_monitor.py  vram_monitor.py
src/airstudio/ui/: components.py  state.py
